fix: fix captions flickering in Safari

--- a/src/plugins/captions.scss
+++ b/src/plugins/captions.scss
@@ -19,6 +19,7 @@ $captions-padding: 16px;
             top: 0;
             padding: $captions-padding;
             background: $captions-background-color;
+            transform: translateZ(0);
         }
     }
 
@@ -41,6 +42,7 @@ $captions-padding: 16px;
             bottom: 0;
             padding: $captions-padding;
             background: $captions-background-color;
+            transform: translateZ(0);
         }
     }
 }
